src/snapshots/venial__tests__parse_enum_generic_params.snap
---
source: src/tests.rs
assertion_line: 390
expression: enum_type
---
Enum(
    Enum {
        attributes: [],
        vis_marker: None,
        name: "Hello",
        generic_params: Some(
            [
                "<",
                "X",
                ",",
                "Y",
                ":",
                "Z",
                "<",
                "A",
                ">",
                ",",
                "Z",
                ">",
            ],
        ),
        where_clauses: None,
        variants: [
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: "A",
                contents: Unit,
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: "B",
                contents: Tuple(
                    [
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                "Foo",
                            ],
                        },
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                "Bar",
                                "<",
                                "X",
                                ",",
                                "Y",
                                ",",
                                "Z",
                                ">",
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: "C",
                contents: Named(
                    [
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: "foo",
                            ty: [
                                "Foo",
                                "<",
                                "X",
                                ",",
                                "Y",
                                ",",
                                "Z",
                                ">",
                            ],
                        },
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: "bar",
                            ty: [
                                "Bar",
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
        ],
    },
)
